Remove height: 100% from html to prevent fixed images/components from covering the scrollbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -67,6 +67,7 @@ mat-sidenav-container {
 }
 
 .nav-toolbar-spacer {
+  background: red;
   height: 64px;
   width: 100%;
 }
